--- a/index.html
+++ b/index.html
@@ -38,37 +38,71 @@
 
   </head>
   <body lang="zh-tw">
-    <div  id='headerPhoto' >
-       <div class='content'>
-          <div></div>
-       </div>
-    </div>
-    <div id='headerMenu'>
-        <div class='content'>
-            <div id='tickets' class='headerMenuItem'>Tickets</div>
-            <div id='lineup' class='headerMenuItem'>Lineup</div>
-            <div id='info' class='headerMenuItem'>Info</div>
-            <div id='gallery' class='headerMenuItem'>Gallery</div>
-            <div id='news' class='headerMenuItem'>News</div>
-            <div id='contact' class='headerMenuItem'>Contact</div>
-        </div>
-    </div>
-    <div id="mainSummaryTitle">
-        <div class='content'>
-          <div class='time'>
-            MARCH 23-26, 2016 / NEW YORK
+      <div  id='headerPhoto' >
+         <div class='content'>
+            <div></div>
+         </div>
+      </div>
+      <div id='headerMenu'>
+          <div class='content'>
+              <div id='tickets' class='headerMenuItem'>Tickets</div>
+              <div id='lineup' class='headerMenuItem'>Lineup</div>
+              <div id='info' class='headerMenuItem'>Info</div>
+              <div id='gallery' class='headerMenuItem'>Gallery</div>
+              <div id='news' class='headerMenuItem'>News</div>
+              <div id='contact' class='headerMenuItem'>Contact</div>
           </div>
-          <div class='title'>
-            Best Music Festival
+      </div>
+      <div id="mainSummaryTitle">
+          <div class='content'>
+            <div class='time'>
+              <p>MARCH 23-26, 2016 / NEW YORK</p>
+            </div>
+            <div class='title'>
+              Best Music Festival
+            </div>
+            <div class="describe">
+              <p>Lorem ipsum dolor sit amet enim, Etiam ullamcorper. Suspe ndiess a lentesque dui, non felis.</p>  
+            </div>
+            <div class='buy'>
+               <button type='button' >Buy Tickets</button>
+            </div>
           </div>
-          <div class="describe">
-            Lorem ipsum dolor sit amet enim, Etiam ullamcorper. Suspe ndiess a lentesque dui, non felis.  
+      </div>
+      <div id='bandTitle' class='title'>  
+         Who Will Play
+      </div>
+      <HR>
+      <div id='band'>
+          <div class='content'>
+              <div >
+               <div class='band'></div>
+               <div class='bandName'>BandName</div> 
+              </div>
+              <div >
+               <div class='band'></div>
+               <div class='bandName'>BandName</div> 
+              </div>
+              <div >
+               <div class='band'></div>
+               <div class='bandName'>BandName</div> 
+              </div>
+              <div >
+               <div class='band'></div>
+               <div class='bandName'>BandName</div> 
+              </div>
+              <div >
+               <div class='band'></div>
+               <div class='bandName'>BandName</div> 
+              </div>
+              <div >
+               <div class='band'></div>
+               <div class='bandName'>BandName</div> 
+              </div>
           </div>
-          <div class='buy'>
-             <button type='button' >Buy Tickets</button>
-          </div>
-        </div>
-
-    </div>
-  </body>
+      </div>
+      <div id='bandReadMore' class='readMore'>
+        <button type='button'>Read more</button>
+      </div>
+  </body> 
 </html>
