--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class='content'>
               <div id='tickets' class='headerMenuItem'>Tickets</div>
               <div id='lineup' class='headerMenuItem'>Lineup</div>
-              <div id='info' class='headerMenuItem'>Info</div>
+              <div id='menuInfo' class='headerMenuItem'>Info</div>
               <div id='gallery' class='headerMenuItem'>Gallery</div>
               <div id='news' class='headerMenuItem'>News</div>
               <div id='contact' class='headerMenuItem'>Contact</div>
@@ -69,10 +69,13 @@
             </div>
           </div>
       </div>
-      <div id='bandTitle' class='title'>  
-         Who Will Play
+      <div id='title'>
+          <div class='content'>
+              <div class='subTitle'>LINEUP #1</div>
+              <div class='title'>Who Will Play</div>
+              <hr>
+          </div>
       </div>
-      <HR>
       <div id='band'>
           <div class='content'>
               <div >
@@ -104,5 +107,102 @@
       <div id='bandReadMore' class='readMore'>
         <button type='button'>Read more</button>
       </div>
+      <div id='title'>
+          <div class='content'>
+              <div class='subTitle'>LINEUP #1</div>
+              <div class='title'>Some Photos</div>
+              <hr>
+          </div>
+      </div>
+      <div id='Photos'>
+          <div class='content'>
+             <div class='bigPhoto'></div>
+             <div class='photo'></div>
+             <div class='photo'></div>
+             <div class='photo'></div>
+          </div>
+      </div> 
+      <div id='PhotoReadMore' class='readMore'>
+        <button type='button'>Read more</button>
+      </div> 
+      <div id='register'>
+         <div class='content'>
+            <div class='box'>
+               <div></div>
+            </div>
+            <div class='registerMsg'>Register Today and Save $49</div>
+            <div class='RegisterButton'>
+              <button type='button'>Register Now</button>
+            </div>
+         </div>
+      </div>
+      <div id='see'> 
+        <div class='content'>
+            <div class='sub'>
+              <div class='title'>See Our Studio</div>
+              <div class='msg'>Lorm ipsum dolor sit amet enim.ullamcorper.
+                Suspendisse a ellentensque dui, non feils. Etaiam ullamcorper.</div>
+              <div class='readMore'>
+                  <button type='button'>Read more</button>
+              </div>
+            </div>
+            <div class='sub'>
+              <div class='title'>See Our Studio</div>
+              <div class='msg'>Lorm ipsum dolor sit amet enim.ullamcorper.
+                Suspendisse a ellentensque dui, non feils. Etaiam ullamcorper.</div>
+              <div class='readMore'>
+                  <button type='button'>Read more</button>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div id='title'>
+          <div class='content'>
+              <div class='subTitle'>About</div>
+              <div class='title'>General Info</div>
+              <hr>
+          </div>
+      </div>
+      <div id='info'>
+        <div class='content'>
+         <div class='list'>
+            <div>
+              <lebal  class='icon-clock'></lebal>
+              <div class='title'>Thuesday. 19 January 2016</div>
+              <div class='sub'>from: 7:00 PM to 10:00(EST)</div>
+            </div>
+            <div>
+              <lebal class='icon-location2'></lebal>
+              <div class='title'>ASF Gymnastics</div>
+              <div class='sub'>40 Vogell Road Richmond Hill, ON L4B 3k7 Canada</div>
+            </div>
+            <div>
+              <lebal class='icon-profile'></lebal>
+              <div class='title'>Add to my calender</div>
+              <div class='sub'>Google | Outlook | iCal | Yahoo</div>
+            </div>
+            <div>
+              <lebal class='icon-share2'></lebal>
+              <div class='title'>Share this event</div>
+              <div class='sub'>
+                 <label class='icon-facebook'></label>
+                 <label class='icon-twitter'></label>
+                 <label class='icon-linkedin2'></label>
+              </div>
+            </div>
+         </div>
+         <div class='photo'></div>
+        </div>
+      </div>
+      <div id='pay'>
+        <div id='title'>
+            <div class='content'>
+                <div class='subTitle'>PASSES</div>
+                <div class='title'>Choose Your Ticket</div>
+                <hr>
+            </div>
+        </div>
+        <div class='content'></div>
+      </div>  
   </body> 
 </html>
