--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
                 <hr>
             </div>
         </div>
-        <div class='content'></div>
+        <div class='content'>
+        
+        </div>
       </div>  
   </body> 
 </html>
