--- a/index.html
+++ b/index.html
@@ -167,22 +167,22 @@
         <div class='content'>
          <div class='list'>
             <div>
-              <lebal  class='icon-clock'></lebal>
+              <label  class='icon-clock'></label>
               <div class='title'>Thuesday. 19 January 2016</div>
               <div class='sub'>from: 7:00 PM to 10:00(EST)</div>
             </div>
             <div>
-              <lebal class='icon-location2'></lebal>
+              <label class='icon-location2'></label>
               <div class='title'>ASF Gymnastics</div>
               <div class='sub'>40 Vogell Road Richmond Hill, ON L4B 3k7 Canada</div>
             </div>
             <div>
-              <lebal class='icon-profile'></lebal>
+              <label class='icon-profile'></label>
               <div class='title'>Add to my calender</div>
               <div class='sub'>Google | Outlook | iCal | Yahoo</div>
             </div>
             <div>
-              <lebal class='icon-share2'></lebal>
+              <label class='icon-share2'></label>
               <div class='title'>Share this event</div>
               <div class='sub'>
                  <label class='icon-facebook'></label>
