--- a/index.html
+++ b/index.html
@@ -202,9 +202,100 @@
                 <hr>
             </div>
         </div>
-        <div class='content'>
-        
-        </div>
+        <div id='paylist'>
+          <div class='content'>
+              <div class='ticket'>
+                 <div class='box'>
+                   <div></div>
+                 </div>
+                 <div class='list'>
+                   <ul>
+                  　<li><div>Lorm ipsum dolor sit amet enim.</div></li>
+                  　<li><div>Suspendisse a ellentensque dui.</div></li>
+                  </ul>
+                 </div>
+                <div class='readMore'>
+                  <button type='button'>Read more</button>
+                </div> 
+              </div>
+              <div class='ticket'>
+                <div class='box'>
+                   <div></div>
+                 </div>
+                 <div class='list'>
+                   <ul>
+                  　<li><div>Suspendisse a ellentensque dui, non feils. </div></li>
+                  　<li><div>Etaiam ullamcorper.</div></li>
+                  　<li><div>Lorm ipsum dolor sit amet enim.ullamcorper.</div></li>
+                  </ul>
+                 </div>
+                <div class='readMore'>
+                  <button type='button'>Read more</button>
+                </div> 
+              </div>
+              <div class='ticket'>
+                 <div class='box'>
+                   <div></div>
+                 </div>
+                 <div class='list'>
+                   <ul>
+                  　 <li><div>Lorm ipsum dolor sit amet enim.ullamcorper.</div></li>
+                  　 <li><div>Suspendisse a ellentensque dui.</div></li>
+                  　 <li><div>Etaiam ullamcorper.</div></li>
+                  </ul>
+                 </div>
+                <div class='readMore'>
+                  <button type='button'>Read more</button>
+                </div> 
+              </div>
+              <div class='readMore'>
+                  <button type='button'>Read more</button>
+              </div>
+          </div>
+        </div>  
       </div>  
+    <div id='aboutMessage'>
+      <div class='content'>
+        <div class='about'>
+          <div class='title'>
+            About Festival
+          </div>
+          <div class='msg'>
+            <p>Lorem ipsum dolor sit amet enim, Etiam ullamcorper. Suspe ndiess a lentesque dui, non felis.Lorem ipsum dolor sit amet enim, Etiam ullamcorper. Suspe ndiess a lentesque dui, non felis.</p>  
+          </div>
+          <div class='readMore'>
+            <button type='button'>Read more</button>
+          </div>
+        </div>
+        <div class='contact'>
+          <div class='title'>
+            Contact
+          </div>
+          <div class='list'>
+             <ul>
+            　 <li><div>Lorm ipsum dolor sit.</div></li>
+            　 <li><div>Suspendisse a.</div></li>
+            　 <li><div>Etaiam ullamcorper.</div></li>
+            </ul>
+          </div>
+          <div class='follow'>
+            Follow Us
+            <div>
+              <div class='box'><div></div></div>
+              <div class='box'><div></div></div>
+              <div class='box'><div></div></div>
+              <div class='box'><div></div></div>
+              <div class='box'><div></div></div>
+              <div class='box'><div></div></div>
+            </div>
+          </div>
+      </div>
+    </div>
+     <div id='footer'>
+        <div class='content'>
+          <div>@ MaestoMail 2016 All rights reserved.</div>
+          <div>Unsubscribe here</div>
+        </div>
+      </div>
   </body> 
 </html>
