--- a/index.html
+++ b/index.html
@@ -38,264 +38,28 @@
 
   </head>
   <body lang="zh-tw">
-      <div  id='headerPhoto' >
-         <div class='content'>
-            <div></div>
+      <header id='header'>
+        <div class='container'>
+          <span>Horizon Zero Dawn™</span>
+        </div>
+      </header>
+      <div id='menu'> 
+        <div class='container'>
+           <a href=''>tickets</a>
+           <a href=''>lineup</a>
+           <a href=''>info</a>
+           <a href=''>Gallery</a>
+           <a href=''>news</a>
+           <a href=''>contact</a>
+        </div>
+      </div>
+      <div id='banner'>
+         <div class='container'>
+             <div >2017-02-28 發行</div>
+             <h1>地平線：期待黎明</h1>
+             <p>《地平線：期待黎明》是款全新的開放世界動作角色扮演遊戲，由開發《殺戮地帶》系列的製作團隊 Guerrilla 操刀製作。玩家將要化身為身手不凡的女獵人亞蘿伊，在這個變化多端、充滿神秘機器生物的世界進行冒險，在這個引人入勝的旅程</p>
+             <a href=''>預購</a>
          </div>
-      </div>
-      <div id='headerMenu'>
-          <div class='content'>
-              <div id='tickets' class='headerMenuItem'>Tickets</div>
-              <div id='lineup' class='headerMenuItem'>Lineup</div>
-              <div id='menuInfo' class='headerMenuItem'>Info</div>
-              <div id='gallery' class='headerMenuItem'>Gallery</div>
-              <div id='news' class='headerMenuItem'>News</div>
-              <div id='contact' class='headerMenuItem'>Contact</div>
-          </div>
-      </div>
-      <div id="mainSummaryTitle">
-          <div class='content'>
-            <div class='time'>
-              <p>MARCH 23-26, 2016 / NEW YORK</p>
-            </div>
-            <div class='title'>
-              Best Music Festival
-            </div>
-            <div class="describe">
-              <p>Lorem ipsum dolor sit amet enim, Etiam ullamcorper. Suspe ndiess a lentesque dui, non felis.</p>  
-            </div>
-            <div class='buy'>
-               <button type='button' >Buy Tickets</button>
-            </div>
-          </div>
-      </div>
-      <div id='title'>
-          <div class='content'>
-              <div class='subTitle'>LINEUP #1</div>
-              <div class='title'>Who Will Play</div>
-              <hr>
-          </div>
-      </div>
-      <div id='band'>
-          <div class='content'>
-              <div >
-               <div class='band'></div>
-               <div class='bandName'>BandName</div> 
-              </div>
-              <div >
-               <div class='band'></div>
-               <div class='bandName'>BandName</div> 
-              </div>
-              <div >
-               <div class='band'></div>
-               <div class='bandName'>BandName</div> 
-              </div>
-              <div >
-               <div class='band'></div>
-               <div class='bandName'>BandName</div> 
-              </div>
-              <div >
-               <div class='band'></div>
-               <div class='bandName'>BandName</div> 
-              </div>
-              <div >
-               <div class='band'></div>
-               <div class='bandName'>BandName</div> 
-              </div>
-          </div>
-      </div>
-      <div id='bandReadMore' class='readMore'>
-        <button type='button'>Read more</button>
-      </div>
-      <div id='title'>
-          <div class='content'>
-              <div class='subTitle'>LINEUP #1</div>
-              <div class='title'>Some Photos</div>
-              <hr>
-          </div>
-      </div>
-      <div id='Photos'>
-          <div class='content'>
-             <div class='bigPhoto'></div>
-             <div class='photo'></div>
-             <div class='photo'></div>
-             <div class='photo'></div>
-          </div>
       </div> 
-      <div id='PhotoReadMore' class='readMore'>
-        <button type='button'>Read more</button>
-      </div> 
-      <div id='register'>
-         <div class='content'>
-            <div class='box'>
-               <div></div>
-            </div>
-            <div class='registerMsg'>Register Today and Save $49</div>
-            <div class='RegisterButton'>
-              <button type='button'>Register Now</button>
-            </div>
-         </div>
-      </div>
-      <div id='see'> 
-        <div class='content'>
-            <div class='sub'>
-              <div class='title'>See Our Studio</div>
-              <div class='msg'>Lorm ipsum dolor sit amet enim.ullamcorper.
-                Suspendisse a ellentensque dui, non feils. Etaiam ullamcorper.</div>
-              <div class='readMore'>
-                  <button type='button'>Read more</button>
-              </div>
-            </div>
-            <div class='sub'>
-              <div class='title'>See Our Studio</div>
-              <div class='msg'>Lorm ipsum dolor sit amet enim.ullamcorper.
-                Suspendisse a ellentensque dui, non feils. Etaiam ullamcorper.</div>
-              <div class='readMore'>
-                  <button type='button'>Read more</button>
-              </div>
-            </div>
-        </div>
-      </div>
-      <div id='title'>
-          <div class='content'>
-              <div class='subTitle'>About</div>
-              <div class='title'>General Info</div>
-              <hr>
-          </div>
-      </div>
-      <div id='info'>
-        <div class='content'>
-         <div class='list'>
-            <div>
-              <label  class='icon-clock'></label>
-              <div class='title'>Thuesday. 19 January 2016</div>
-              <div class='sub'>from: 7:00 PM to 10:00(EST)</div>
-            </div>
-            <div>
-              <label class='icon-location2'></label>
-              <div class='title'>ASF Gymnastics</div>
-              <div class='sub'>40 Vogell Road Richmond Hill, ON L4B 3k7 Canada</div>
-            </div>
-            <div>
-              <label class='icon-profile'></label>
-              <div class='title'>Add to my calender</div>
-              <div class='sub'>Google | Outlook | iCal | Yahoo</div>
-            </div>
-            <div>
-              <label class='icon-share2'></label>
-              <div class='title'>Share this event</div>
-              <div class='sub'>
-                 <label class='icon-facebook'></label>
-                 <label class='icon-twitter'></label>
-                 <label class='icon-linkedin2'></label>
-              </div>
-            </div>
-         </div>
-         <div class='photo'></div>
-        </div>
-      </div>
-      <div id='pay'>
-        <div id='title'>
-            <div class='content'>
-                <div class='subTitle'>PASSES</div>
-                <div class='title'>Choose Your Ticket</div>
-                <hr>
-            </div>
-        </div>
-        <div id='paylist'>
-          <div class='content'>
-              <div class='ticket'>
-                 <div class='box'>
-                   <div></div>
-                 </div>
-                 <div class='list'>
-                   <ul>
-                  　<li><div>Lorm ipsum dolor sit amet enim.</div></li>
-                  　<li><div>Suspendisse a ellentensque dui.</div></li>
-                  </ul>
-                 </div>
-                <div class='readMore'>
-                  <button type='button'>Read more</button>
-                </div> 
-              </div>
-              <div class='ticket'>
-                <div class='box'>
-                   <div></div>
-                 </div>
-                 <div class='list'>
-                   <ul>
-                  　<li><div>Suspendisse a ellentensque dui, non feils. </div></li>
-                  　<li><div>Etaiam ullamcorper.</div></li>
-                  　<li><div>Lorm ipsum dolor sit amet enim.ullamcorper.</div></li>
-                  </ul>
-                 </div>
-                <div class='readMore'>
-                  <button type='button'>Read more</button>
-                </div> 
-              </div>
-              <div class='ticket'>
-                 <div class='box'>
-                   <div></div>
-                 </div>
-                 <div class='list'>
-                   <ul>
-                  　 <li><div>Lorm ipsum dolor sit amet enim.ullamcorper.</div></li>
-                  　 <li><div>Suspendisse a ellentensque dui.</div></li>
-                  　 <li><div>Etaiam ullamcorper.</div></li>
-                  </ul>
-                 </div>
-                <div class='readMore'>
-                  <button type='button'>Read more</button>
-                </div> 
-              </div>
-              <div class='readMore'>
-                  <button type='button'>Read more</button>
-              </div>
-          </div>
-        </div>  
-      </div>  
-    <div id='aboutMessage'>
-      <div class='content'>
-        <div class='about'>
-          <div class='title'>
-            About Festival
-          </div>
-          <div class='msg'>
-            <p>Lorem ipsum dolor sit amet enim, Etiam ullamcorper. Suspe ndiess a lentesque dui, non felis.Lorem ipsum dolor sit amet enim, Etiam ullamcorper. Suspe ndiess a lentesque dui, non felis.</p>  
-          </div>
-          <div class='readMore'>
-            <button type='button'>Read more</button>
-          </div>
-        </div>
-        <div class='contact'>
-          <div class='title'>
-            Contact
-          </div>
-          <div class='list'>
-             <ul>
-            　 <li><div>Lorm ipsum dolor sit.</div></li>
-            　 <li><div>Suspendisse a.</div></li>
-            　 <li><div>Etaiam ullamcorper.</div></li>
-            </ul>
-          </div>
-          <div class='follow'>
-            Follow Us
-            <div>
-              <div class='box'><div></div></div>
-              <div class='box'><div></div></div>
-              <div class='box'><div></div></div>
-              <div class='box'><div></div></div>
-              <div class='box'><div></div></div>
-              <div class='box'><div></div></div>
-            </div>
-          </div>
-      </div>
-    </div>
-     <div id='footer'>
-        <div class='content'>
-          <div>@ MaestoMail 2016 All rights reserved.</div>
-          <div>Unsubscribe here</div>
-        </div>
-      </div>
   </body> 
 </html>
