--- a/index.html
+++ b/index.html
@@ -60,6 +60,44 @@
              <p>《地平線：期待黎明》是款全新的開放世界動作角色扮演遊戲，由開發《殺戮地帶》系列的製作團隊 Guerrilla 操刀製作。玩家將要化身為身手不凡的女獵人亞蘿伊，在這個變化多端、充滿神秘機器生物的世界進行冒險，在這個引人入勝的旅程</p>
              <a href=''>預購</a>
          </div>
+      </div>
+      <div id='header2'>
+          <div class='container'>
+               <span >Line up #1</span>
+               <h1>Who Will Play</h1>
+               <hr/>
+          </div>
       </div> 
+      <div id='band'>
+         <div class='container'> 
+            <div>
+              <img src=""/>
+              <span>BAND NAME</span>
+            </div>
+            <div>
+              <img src=""/>
+              <span>BAND NAME</span>
+            </div>
+            <div>
+              <img src=""/>
+              <span>BAND NAME</span>
+            </div>
+            <div>
+              <img src=""/>
+              <span>BAND NAME</span>
+            </div>
+            <div>
+              <img src=""/>
+              <span>BAND NAME</span>
+            </div>
+            <div>
+              <img src=""/>
+              <span>BAND NAME</span>
+            </div>
+
+            <a href=''>Read Me</a>
+         </div>
+      </div>
+
   </body> 
 </html>
